# MidiKit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  derp.cpp
docs-theme/: customdoxygen.css
planning/: concept.yaml  midi-flow-2.puml  midi-flow.puml  midi-specs.yaml  midi.dot  midi.puml  midi.v  midikit-device.puml  stuff.md
src/common/: midikit.cpp  midikit.h
src/types/: messages.cpp  messages.h
tests/: test_test.cpp
